@@ -1,3 +1,8 @@
+2006-12-14  Ulrich Drepper  <drepper@redhat.com>
+
+	* misc/tst-pselect.c (do_test): Make sure the helper process is
+	terminating when the test is aborted.
+
 2006-12-13  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/unix/sysv/linux/bits/statvfs.h: Define ST_RELATIME.
